Small update to blogs

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -48,7 +48,7 @@
             <a href = ""><h3> {{ blog.title }}  </h3></a>
             <img class="img-fluid" src="{{ blog.image.url }}" height=200 width=200/>
             <br/>
-            {{ blog.body }}
+            {{ blog.summary }}
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
